--- a/soccerbase/templates/soccerbase/tables/players_card.html
+++ b/soccerbase/templates/soccerbase/tables/players_card.html
@@ -109,7 +109,7 @@
         </div>
 
         <div class="col-5 col-md-2  text-center">
-             {{ object.profile.voivodeship|default:'-'|upper|truncatechars:24 }}
+             {{ object.profile.display_voivodeship|default:'-'|upper|truncatechars:24 }}
         </div>
         
         <div class="col-6 col-md-2 text-center"> 
