--- a/backend/templates/404.html
+++ b/backend/templates/404.html
@@ -1,9 +1,4 @@
-{% extends "base.html" %}
 
-{% block body_class %}template-404{% endblock %}
+    <h1>W tym momencie odświeżamy strone.</h1>
 
-{% block content %}
-    <h1>Wybrana strona nie istnieje</h1>
-
-    <h2>Wybacz ale wyszukiwana strona nie istnieje.</h2>
-{% endblock %}
+    <h2>Będzie dostępna już jutro ;) </h2>
