--- a/backend/static/assets/css/tables.css
+++ b/backend/static/assets/css/tables.css
@@ -11,6 +11,9 @@
 #table-filters form  option:not(:checked){ color: green; }
 select.form-control option:checked { color: #0AD; }
 #filter-form option:not(:checked) { color: green; }
+
+
+
 #tables {
     padding-top: 15px;
 }
@@ -47,9 +50,10 @@ a.back-to-top i{
 }
 
 #tables .player-header-card .card-body{
-
+    
     background-color:#ced4da;
 }
+
 
 
 #tables .card .card-footer{ 
@@ -78,7 +82,10 @@ a.back-to-top i{
 section.tables {
     padding-top: 10px;
 }
-
+#table-filters select, #table-filters input{
+    font-size:16px;;
+    padding:.2rem;
+}
 
 
 /* .table-item {
@@ -97,7 +104,28 @@ section.tables {
     #tables .card-header {
         padding: .4rem;
     }
-    
+    #tables{
+        font-size:.7em;
+        padding:.2rem;
+        padding-top: 0px;
+        background-color:#2b2b2b;
+        margin-top: 63px;
+    }
+
+    #tables
+            input[type='text'],
+        select,
+        input[type='number'],
+        textarea {
+        font-size: 16px;
+    }
+    #tables .card-header {
+        border-bottom:0px;
+    }
+    #tables .card-footer{
+        border-bottom:0px;
+        padding: 0.5rem 1.25rem;
+    }
     #tables .card .stats  {
         margin-top:4px;
     }
@@ -112,11 +140,6 @@ section.tables {
         padding: .3rem .3rem;
     }
 
-    #tables { 
-        background-color:#2b2b2b;
-        margin-top: 63px;
-        
-    }
     #tables li {
         padding: 0px;
     }
@@ -128,9 +151,7 @@ section.tables {
       padding-left: 0px;
       padding-right: 0px;
   }
-    #tables { 
-        padding-top: 0px;
-    }
+
 
     .banner {
         margin-bottom: 0px;
@@ -148,10 +169,12 @@ section.tables {
     #table-filters .filter{
         padding:2px 2px;
     }
-    #tables, #table-filters select, #table-filters input{
-        font-size:.7em;
+
+    #table-filters select, #table-filters input{
+        font-size:16px;;
         padding:.2rem;
     }
+
     #tables .card {
         margin-bottom: 2px;
         box-shadow: 0px 0px 0px #e2e8f0;
