--- a/profiles/templates/profiles/cards/_base_account_card.html
+++ b/profiles/templates/profiles/cards/_base_account_card.html
@@ -87,6 +87,19 @@
             obserwujących
           </div> 
 
+          {% if user.is_verified and editable %}
+            {% if user.is_player  %}
+            <div class="text-muted">
+                Możesz wysłać <strong>{{ user.userinquiry.left }}</strong> zapytań o testy do 30.06.2021. By zwiększyć limity  <a href="https://playmaker.pro/limit/">kliknij</a>
+            </div>
+            {% elif user.is_coach or user.is_club %}
+            <div class="text-muted">
+            Możesz wysłać <strong>{{ user.userinquiry.left }}</strong> zaproszeń na testy do 30.06.2021. By zwiększyć limity  <a href="https://playmaker.pro/limit/">kliknij</a>
+            </div>  
+            {% endif %}
+
+          {% endif %}
+
       </div>  <!-- end of col-md-9 -->
     </div>  <!-- end of row -->
   </div>  <!-- end of card body -->
