--- a/soccerbase/templates/soccerbase/tables/players_card.html
+++ b/soccerbase/templates/soccerbase/tables/players_card.html
@@ -170,7 +170,7 @@
     <div class="col">
         <span class="main-color">{{ object.profile.playermetrics.season_summary.games_played|default:'0' }}</span>  mecze     
         <span class="main-color">{{ object.profile.playermetrics.season_summary.minutes_played |default:'0' }}</span>  minuty
-        <span class="main-color">{{ object.profile.playermetrics.season_summary.team_goals|default:'0' }}</span> gole
+        <span class="main-color">{{ object.profile.playermetrics.season_summary.team_goals|default:'0' }}</span> bramki
     </div>
     
     <span class="float-right"> </span>
