--- a/soccerbase/templates/soccerbase/tables/filters/filter_first_last_name.html
+++ b/soccerbase/templates/soccerbase/tables/filters/filter_first_last_name.html
@@ -1,1 +1,3 @@
-<input class="form-control" type="text" value="{{ request.GET.first_last }}" name="first_last" placeholder="imie nazwisko">
+
+
+<input class="form-control" style="width:{{ size }}px;" type="text" value="{{ request.GET.first_last }}" name="first_last" placeholder="imie nazwisko">
