changing about page

--- a/backend/templates/partials/_menuitems.html
+++ b/backend/templates/partials/_menuitems.html
@@ -1,4 +1,4 @@
- <li><a href="{% url 'home_goals' %}">O projekcie</a></li>
+ <li><a href="/about-project/">O projekcie</a></li>
 {% comment %} <li><a href="#services">Fantasy</a></li>
 <li><a href="#portfolio">Rozgrywki</a></li> {% endcomment %}
 <li class="drop-down"><a href="">Bazy</a>
