tables styles appended

--- a/backend/static/assets/css/tables.css
+++ b/backend/static/assets/css/tables.css
@@ -135,7 +135,9 @@ section.tables {
     #tables .container-fluid > :last-child{ 
         padding-bottom: 105px;
     }
-
+    #tables .object-title a {
+        
+    }
     #tables .container-fluid .table {
         padding: .3rem .3rem;
     }
