--- a/backend/templates/partials/footer.html
+++ b/backend/templates/partials/footer.html
@@ -64,12 +64,13 @@
     </div>
     </div>
     <div class="social-links text-center text-md-right pt-3 pt-md-0">
-      <a href="@todo"
-      
-       class="twitter"><i class="bx bxl-twitter"></i></a>
-      <a href="@todo" class="facebook"><i class="bx bxl-facebook"></i></a>
-      <a href="@todo" class="instagram"><i class="bx bxl-instagram"></i></a>
-      <a href="@todo" class="google-plus"><i class="bx bxl-skype"></i></a>
-      <a href="@todo" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      <a href="https://twitter.com/ProPlaymaker/"class="twitter"><i class="bx bxl-twitter"></i></a>
+      <a href="https://www.facebook.com/playmakerpropl/" class="facebook"><i class="bx bxl-facebook"></i></a>
+      <a href="https://www.instagram.com/playmaker.pro/" class="instagram"><i class="bx bxl-instagram"></i></a>
+      {% comment %} <a href="@todo" class="google-plus"><i class="bx bxl-skype"></i></a> {% endcomment %}
+      <a href="https://www.linkedin.com/company/playmaker-pro/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
     </div>
 </div>
+
+
+
