--- a/soccerbase/templates/soccerbase/table.html
+++ b/soccerbase/templates/soccerbase/table.html
@@ -1,5 +1,5 @@
+{% extends 'platform/base.html' %}
 
-{% extends 'soccerbase/base.html' %}
 {% load i18n %}
 
 {% comment %} 
@@ -51,11 +51,11 @@
 
 
 {% if type == 'P' %}
-    {% include 'soccerbase/tables/filters/player.html' %}
+    {% include 'soccerbase/tables/filters_desktop_players.html' %}
 {% elif type == 'T' %}
-    {% include 'soccerbase/tables/filters/coaches.html' %}
+    {% include 'soccerbase/tables/filters_desktop_coaches.html' %}
 {% elif type == 'C' %}
-    {% include 'soccerbase/tables/filters/teams.html' %}
+    {% include 'soccerbase/tables/filters_desktop_teams.html' %}
 {% endif %}
 
 
@@ -66,11 +66,11 @@
             {% include 'platform/partials/_empty.html' %}
         {% else %}
         {% if type == 'P' %}
-            {% include 'soccerbase/tables/players_card.html' with objects=page_obj %}
+            {% include 'soccerbase/tables/table_players_card.html' with objects=page_obj %}
         {% elif type == 'T' %}
-            {% include 'soccerbase/tables/coaches_card.html' with objects=page_obj %}
+            {% include 'soccerbase/tables/table_coaches_card.html' with objects=page_obj %}
         {% elif type == 'C' %}
-            {% include 'soccerbase/tables/teams_card.html' with objects=page_obj %}
+            {% include 'soccerbase/tables/table_teams_card.html' with objects=page_obj %}
         {% endif %}
         <span></span>   
         {% include 'platform/partials/_pagination.html'%}
@@ -88,12 +88,60 @@
 {% block extra_js %}
     {{ block.super }}
 
-
- {% include 'soccerbase/tables/filters/modal.html' %}
+    {% if type == 'P' %}
+        {% include 'soccerbase/tables/filters_modal_players.html' %}
+    {% elif type == 'T' %}
+        {% include 'soccerbase/tables/filters_modal_coaches.html' %}
+    {% elif type == 'C' %}
+        {% include 'soccerbase/tables/filters_modal_teams.html' %}
+    {% endif %}
 
 <script>
 
- 
+
+$("#filter-button").click(function(){
+    $("input").each(function(){
+        if($(this).val() == '') {
+            console.log('asdasdas');
+            $(this).remove();
+        }
+    });
+    $("#filter-button").submit();
+});
+
+
+$("#filter-button-mobile").click(function(){
+    $("input").each(function(){
+        if($(this).val() == '') {
+            console.log('asdasdas');
+            $(this).remove();
+        }
+    });
+    $("#filter-button-mobile").submit();
+});
+
+$(document).ready(function($){
+  
+	$("filter-form").submit(function() {
+		$(this).find(":input").filter(function(){ return !this.value; }).attr("disabled", "disabled");
+		return true; // ensure form still submits
+	});
+	
+	// Un-disable form fields when page loads, in case they click back after submission
+	$( "filter-form" ).find( ":input" ).prop( "disabled", false );
+	
+    
+    $("filter-form-mobile").submit(function() {
+		$(this).find(":input").filter(function(){ return !this.value; }).attr("disabled", "disabled");
+		return true; // ensure form still submits
+	});
+	
+	// Un-disable form fields when page loads, in case they click back after submission
+	$( "filter-form-mobile" ).find( ":input" ).prop( "disabled", false );
+	
+});
+
+
 function checkWindowSize() {  
 
     if ( $(window).width() > 786 ) {  
