--- a/soccerbase/templates/soccerbase/tables/filters/filter_vivo_ms.html
+++ b/soccerbase/templates/soccerbase/tables/filters/filter_vivo_ms.html
@@ -1,6 +1,6 @@
 
 {% load playmaker %}
-<select name="vivo" data-width="120px" title="region" class="selectpicker" data-actions-box="true" multiple data-live-search="true" data-selected-text-format="count > 3">
+<select name="vivo" data-width="{{ size }}" title="region" class="selectpicker" data-actions-box="true" multiple data-live-search="true" data-selected-text-format="count > 3">
 
 <option {% if "śląskie" in request.GET|get_list:"vivo" %} selected="selected" {% endif %}>śląskie</option>
 {% comment %} <option {% if "łódzkie/mazowieckie/warmińskomazurskie/podlaskie" in request.GET|get_list:"vivo" %} selected="selected" {% endif %}>łódzkie/mazowieckie/warmińskomazurskie/podlaskie</option> {% endcomment %}
