tables styles appended

--- a/soccerbase/templates/soccerbase/tables/filters_desktop_players.html
+++ b/soccerbase/templates/soccerbase/tables/filters_desktop_players.html
@@ -26,10 +26,10 @@
 
     </div>
     <div class="col-1 filter"> 
-        {% include 'soccerbase/tables/filters/filter_age_min_input.html' %}
+        {% include 'soccerbase/tables/filters/filter_age_min_input.html' with size=120  %}
     </div>
     <div class="col-1 filter"> 
-        {% include 'soccerbase/tables/filters/filter_age_max_input.html' %}
+        {% include 'soccerbase/tables/filters/filter_age_max_input.html' with size=120  %}
     </div>
 
 
