--- a/soccerbase/templates/soccerbase/tables/table_teams_card.html
+++ b/soccerbase/templates/soccerbase/tables/table_teams_card.html
@@ -23,7 +23,7 @@
 
                 <div class="d-none d-md-inline col-md-3">
                   <a href="{{ object.get_permalink }}"> 
-                    <img class="avatar rounded img-responsive" src="{% thumbnail object.picture|default:'default_team.png' 'tables_avatar_show_medium' %}">
+                    <img class="avatar rounded img-responsive" src="{% thumbnail object.picture|default:'default_profile.png' 'tables_avatar_show_medium' %}">
                     <strong style="padding-left:15px;">{{ object.name|upper}}</strong>
                   </a>
                 </div>
