form prod changes dnager !

--- a/backend/templates/404.html
+++ b/backend/templates/404.html
@@ -1,4 +1,9 @@
+{% extends 'base.html' %} 
 
+
+{% block content %
     <h1>W tym momencie odświeżamy strone.</h1>
 
-    <h2>Będzie dostępna już jutro ;) </h2>
+    <h2>Nie ma takiej strony. </h2>
+
+{% endblock content %} 
