--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -74,7 +74,7 @@
 
         <div class="section-title">
           <h2>Skauting Play<span class="main-color">Maker</span>.Pro</h2>
-          <p>Sprawdź produkty skautingowe dedykowane zarządzającym klubami. Rozwiążemy Twoje kadrowe problemy, po szukamy talentów w określonym regionie, przeprowadzimy dla Ciebie nabór do szkółki piłkarskiej.</p>
+          <p>Sprawdź wsparcie skautingowe dedykowane dla zarządzających klubami. Rozwiążemy Twoje kadrowe problemy. Znajdziemy talenty w określonym regionie. Przeprowadzimy dla Ciebie nabór do szkółki piłkarskiej.</p>
         </div>
 
         <div class="row">
@@ -92,8 +92,6 @@
                 <li>Wystawiamy raport skautingowy</li>
                 <li>Kontaktujemy się z zawodnikami**</li>
                 <li>Rozliczamy się od efektu: testów i transferu</li>
-                <li></li>
-                <li style="font-size:1.2rem;">od 199 pln</li>
               </ul>
             
               <div class="btn-wrap">
@@ -117,8 +115,6 @@
                 <li>Weryfikujemy social media </li>
                 <li>Konsultujemy systematycznie raporty skautingowe </li>
                 <li>Rekomendujemy wyróżniających się piłkarzy</li>
-                <li></li>
-                <li style="font-size:1.5rem;">od 699 pln</li>
               </ul>
 
               <div class="btn-wrap">
@@ -142,8 +138,6 @@
                 <li>Wystawiamy raport skautingowy </li>
                 <li>Kontaktujemy się z rodzicami**</li>
                 <li>Rozliczamy się od efektu: testów i transferu</li>
-                <li></li>
-                <li style="font-size:1.2rem;">od 199 pln</li>
               </ul>
             
               <div class="btn-wrap">
@@ -172,10 +166,10 @@
           
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i>Chcesz wzmocnić lub poszerzyć swój skład? Szukasz talentów? Skorzystaj z darmowej bazy PlayMaker.Pro, filtruj według własnych upodobań i zapraszaj piłkarzy na testy. 
+              <li><i class="ri-check-double-line"></i>Skorzystaj z darmowej bazy PlayMaker.pro i filtruj ją według własnych upodobań. Jednym kliknięciem zapraszaj zawodników na testy w swoim klubie! 
                       </li>
                       <a href="/tables/players/" class="btn-owl mb-5">Zobacz bazę piłkarzy</a>
-              <li><i class="ri-check-double-line"></i>Brak zawodników spełniających Twoje wymagania? Zleć nam poszukiwania poza bazą. Przeprowadzimy dla Ciebie nabór do szkółki. Znajdziemy zawodników o konkretnych cechach niezależnie od poziomu rozgrywkowego. A dla klubów profesjonalnych monitorujemy region jako skauci. 
+              <li><i class="ri-check-double-line"></i>Baza piłkarzy nie spełnia Twoich oczekiwań? Zleć poszukiwania skautom PlayMaker.pro! Znajdziemy zawodników o konkretnych cechach na każdym poziomie rozgrywkowym. Skorzystaj z profesjonalnego monitoringu wybranego regionu. 
                       </li>
                       <a href="/scouting/" class="btn-owl scrollto">Zobacz ofertę</a>
             </ul>
@@ -230,7 +224,7 @@
             <div class="content">
               <h3>Kto jeszcze może korzystać z platformy?</h3>
               <p>
-                Niezależnie czy jesteś skautem, menadżerem,  dyrektorem sportowym, obserwatorem, kibicem czy też rodzicem młodego adepta – możesz korzystać z PlayMaker.Pro. Zarejestruj się i zyskaj szereg możliwości dostępnych w serwisie.
+                Niezależnie od tego, czy jesteś kibicem, skautem, dyrektorem sportowym, rodzicem młodego adepta, obserwatorem, czy menadżerem – PlayMaker.pro spełni Twoje oczekiwania! Zarejestruj się i zyskaj szereg możliwości dostępnych w serwisie.
               </p>
               <a href="/signup/" class="about-btn"><span>załóż konto </span> <i class="bx bx-chevron-right"></i></a>
             </div>
@@ -241,22 +235,22 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <i class="icofont-search-user"></i>
                   <h4>Moduł obserwacji</h4>
-                  <p>Dodawaj kluby, trenerów i piłkarzy i śledź ich rozwój. Otrzymuj regularne powiadomienia o ich rezultatach. Wszystko pod jednym przyciskiem. Nie musisz otwierać setek stron.</p>
+                  <p>Obserwuj kluby, trenerów, piłkarzy i śledź ich rozwój. Otrzymuj regularne powiadomienia o ich boiskowych wynikach. Wszystko w jednym miejscu, bez zbędnego otwierania kolejnych okien</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="icofont-score-board"></i>
                   <h4>Moduł wyników</h4>
-                  <p>rzeglądaj w przejrzysty i elegancki sposób rozgrywki niższych lig. Znajdziesz tam wyniki, tabele oraz terminarze rozgrywek seniorskich, juniorskich, a także kobiecych.</p>
+                  <p>Przeglądaj w przejrzysty sposób rozgrywki niższych lig. Wyniki, tabele oraz terminarze rozgrywek seniorskich, juniorskich, a także kobiecych. </p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="icofont-listine-dots"></i>
                   <h4>Produkty PlayMaker</h4>
-                  <p>Dostęp do zniżek ze sprzętem sportowym, konsultacji dietetycznych, trenerów przygotowania motorycznego, siłowego, piłkarskiego oraz mentalnego.</p>
+                  <p>Dostęp do piłkarskich produktów, konsultacji dietetycznych, trenerów przygotowania motorycznego, siłowego, piłkarskiego oraz mentalnego.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
                   <h4>Zostań skautem</h4>
-                  <p>Korzystaj z naszej aplikacji skautingowej dla własnych potrzeb lub zostań przy jej pomocy skautem PlayMaker.Pro.</p>
+                  <p>Korzystaj z naszej aplikacji skautingowej (w trakcie realizacji) dla własnych potrzeb lub zostań przy jej pomocy skautem PlayMaker.Pro. </p>
                 </div>
               </div>
             </div><!-- End .content-->
@@ -298,7 +292,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-field"></i>
-              <<span data-toggle="counter-up">100</span>
+              <span data-toggle="counter-up">84</span>
               <p>Liczba wysłanych piłkarzy na testy</p>
             </div>
           </div>
@@ -306,7 +300,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-search-user"></i>
-              <span data-toggle="counter-up">10</span>
+              <span data-toggle="counter-up">11</span>
               <p>Liczba przeprowadzonych naborów do szkółek</p>
             </div>
           </div>
