Club model changes

--- a/users/templates/account/partials/_signup.html
+++ b/users/templates/account/partials/_signup.html
@@ -102,7 +102,7 @@
         <div class="terms col-12">
           
             <label class="" for="id_rules">
-                <i class="icofont-law-document"></i> {% trans 'Rejestrując się potwierdzasz, że zapoznałeś się z ' %}<a href="/regulamin" target="_blank">{% trans 'regulaminem PlayMaker.pro' %}</a> {% trans 'oraz akceptujesz jego warunki.' %} 
+                <i class="icofont-law-document"></i> {% trans 'Rejestrując się potwierdzasz, że zapoznałeś się z ' %}<a href="/rules/" target="_blank">{% trans 'regulaminem PlayMaker.pro' %}</a> {% trans 'oraz akceptujesz jego warunki.' %} 
             </label>
         </div>
 
@@ -120,8 +120,8 @@
                       
                           <div id="rodoCollapse" class="collapse" aria-labelledby="headingOne" data-parent="#rodo-terms">
                             <div class="card-body">
-                              {% trans "@todo Anim pariatur cliche reprehenderit, vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS." %}  
-                              <a href="/rodo" target="_blank">{% trans 'czytaj więcej ' %}</a>
+                              {% trans "W trosce o zapewnienie możliwie pełnej zgodności z ustanowionymi w przepisach rozporządzenia Parlamentu Europejskiego i Rady (UE) 2016/679 z 27 kwietnia 2016 r. w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu takich danych..." %}  
+                              <a href="/privacypolicy/" target="_blank">{% trans 'czytaj więcej ' %}</a>
                             </div>
                           </div>
                         
